<resources>
    <string name="app_name">英雄猫</string>

    <!-- Menu in Navigation View -->
    <string name="navigation_menu_signin">登陆</string>
    <string name="navigation_menu_signout">注销</string>
    <string name="navigation_menu_homepage">首页</string>
    <string name="navigation_menu_favourite">收藏</string>
    <string name="navigation_menu_setting">设置</string>
    <string name="navigation_menu_quit">退出</string>

    <!-- CardView -->
    <string name="cardview_comment">评论</string>
    <string name="cardview_share">分享</string>
    <string name="cardview_like">喜欢</string>

    <!-- drawable : button selector -->
    <drawable name="click_normal">#3F51B5</drawable>
    <drawable name="click_pressed">#0000FF</drawable>

    <!-- textview selector -->
    <color name="click_normal_textview">#FFFFFF</color>
    <color name="click_pressed_textview">#CCCCCC</color>

    <!-- login fragment -->
    <string name="login">登陆</string>
    <string name="login_button">登陆</string>
    <string name="login_problem">忘记密码？</string>
    <string name="login_register">注册</string>
    <string name="login_account">请输入用户名/手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_otherway">使用其它方式登陆</string>

    <!-- register fragment -->
    <string name="register">注册</string>
    <string name="register_phone">请输入手机号</string>
    <string name="register_input_sms_code">请输入验证码</string>
    <string name="register_get_sms_code">获取验证码</string>
    <string name="register_input_password">请输入密码</string>
    <string name="register_confirm_password">请确认密码</string>
    <string name="register_for_login">已有账号</string>

    <!-- favourite fragment -->
    <string name="favourite">收藏</string>

    <!-- setting fragment -->
    <string name="setting">设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_new_version">版本更新</string>
    <string name="about_herocat">关于英雄猫</string>
    <string name="user_feedback">用户反馈</string>
    <string name="service_terms">服务条款</string>
    <string name="privacy_policy">隐私条款</string>

    <string name="comment_detail">评论详情</string>
    <string name="comment_zone">评论区</string>
    <string name="comment_publish">发布</string>
    <string name="comment_hint">写评论...</string>
    <string name="publish_time_default">1分钟前</string>
    <string name="publish_content_default">不错，顶！</string>

    <string name="number_99">(99)</string>

    <string name="liufan_tech">© 2015 Liufan technology Ltd.co</string>

</resources>
