<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/navigation_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/signin"
            android:icon="@drawable/ico_user"
            android:title="@string/navigation_menu_signin" />

        <item
            android:id="@+id/homepage"
            android:icon="@drawable/ico_home"
            android:title="@string/navigation_menu_homepage" />

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ico_favorite"
            android:title="@string/navigation_menu_favourite" />

        <item
            android:id="@+id/setting"
            android:icon="@drawable/ico_settings"
            android:title="@string/navigation_menu_setting" />

        <item
            android:id="@+id/quit"
            android:icon="@drawable/ico_delete"
            android:title="@string/navigation_menu_quit" />

    </group>

</menu>