<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splitBar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <View style="@style/MyStyle.SettingItem_SplitBar" />

                <TextView
                    style="@style/MyStyle.SettingItem_Text"
                    android:text="@string/clear_cache" />

                <View style="@style/MyStyle.SettingItem_SplitLine" />

                <TextView
                    style="@style/MyStyle.SettingItem_Text"
                    android:text="@string/check_new_version" />

                <View style="@style/MyStyle.SettingItem_SplitBar" />

                <TextView
                    style="@style/MyStyle.SettingItem_Text"
                    android:text="@string/user_feedback" />

                <View style="@style/MyStyle.SettingItem_SplitLine" />

                <TextView
                    style="@style/MyStyle.SettingItem_Text"
                    android:text="@string/service_terms" />

                <View style="@style/MyStyle.SettingItem_SplitLine" />

                <TextView
                    style="@style/MyStyle.SettingItem_Text"
                    android:text="@string/privacy_policy" />

                <View style="@style/MyStyle.SettingItem_SplitLine" />

                <TextView
                    style="@style/MyStyle.SettingItem_Text"
                    android:text="@string/about_herocat" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/liufan_tech" />

    </LinearLayout>


</LinearLayout>