<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <me.uteacher.www.herocat.widget.CircleImageView
        android:id="@+id/user_portrait"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_launcher"
        app:civ_border_color="@color/blue"
        app:civ_border_width="1dp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_marginTop="5dp"
            android:text="@string/publish_time_default"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/comment_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/thumb_up"
            android:drawableStart="@drawable/thumb_up"
            android:gravity="center"
            android:text="@string/number_99" />

        <TextView
            android:id="@+id/comment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/publish_time"
            android:layout_marginTop="15dp"
            android:text="@string/publish_content_default" />

    </RelativeLayout>


</LinearLayout>