<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <me.uteacher.www.herocat.widget.CircleImageView
            android:id="@+id/user_portrait"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher"
            app:civ_border_color="#000000"
            app:civ_border_width="3dp" />

        <me.uteacher.www.herocat.widget.ClearEditText
            android:id="@+id/registerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/ico_delete"
            android:drawableLeft="@drawable/ic__black_phone"
            android:drawablePadding="24dp"
            android:drawableRight="@drawable/ico_delete"
            android:drawableStart="@drawable/ic__black_phone"
            android:hint="@string/register_phone"
            android:inputType="phone"
            android:paddingTop="16dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <me.uteacher.www.herocat.widget.ClearEditText
                android:id="@+id/registerInputCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ico_delete"
                android:drawableLeft="@drawable/icon_black_sms"
                android:drawablePadding="24dp"
                android:drawableRight="@drawable/ico_delete"
                android:drawableStart="@drawable/icon_black_sms"
                android:hint="@string/register_input_sms_code"
                android:inputType="number"
                android:paddingTop="16dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/registerGetCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_weight="2"
                android:text="@string/register_get_sms_code" />

        </LinearLayout>

        <me.uteacher.www.herocat.widget.ClearEditText
            android:id="@+id/registerSetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ico_delete"
            android:drawableLeft="@drawable/ic_black_lock"
            android:drawablePadding="24dp"
            android:drawableRight="@drawable/ico_delete"
            android:drawableStart="@drawable/ic_black_lock"
            android:hint="@string/register_input_password"
            android:inputType="textPassword"
            android:paddingTop="16dp"
            android:textSize="16sp" />

        <me.uteacher.www.herocat.widget.ClearEditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ico_delete"
            android:drawableLeft="@drawable/ic_black_lock"
            android:drawablePadding="24dp"
            android:drawableRight="@drawable/ico_delete"
            android:drawableStart="@drawable/ic_black_lock"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            android:paddingTop="16dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_button"
            android:clickable="false"
            android:text="@string/login_register"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="@string/register_for_login"
                android:textColor="#999999"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/registerLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/login_button"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>